@@ -1,3 +1,8 @@
+2020-07-10 Sergey Belyashov <sergey.belyashov@gmail.com>
+
+	* device/lib/_memmove.c
+	  Small optimization of generic memmove() implementation
+
 2020-07-08 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* support/regression/tests/itoa.c
